# pymaterials-manager

./: .buildinfo  .codespellrc  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONBTRIBUTORS.md  CONTRIBUTORS.md  README.rst  contributing.html  genindex.html  index.html  material.out  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  serialize_model.py  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  dependabot_approve.yml  label.yml
_sources/autoapi/ansys/materials/manager/material/: index.rst.txt
autoapi/: index.html
autoapi/ansys/materials/manager/: index.html
autoapi/ansys/materials/manager/_models/: index.html
autoapi/ansys/materials/manager/_models/_common/: index.html
autoapi/ansys/materials/manager/_models/_common/_base/: index.html
autoapi/ansys/materials/manager/_models/_common/_exceptions/: index.html
autoapi/ansys/materials/manager/_models/_common/_packages/: index.html
autoapi/ansys/materials/manager/_models/_common/constant/: index.html
autoapi/ansys/materials/manager/_models/_common/piecewise_linear/: index.html
autoapi/ansys/materials/manager/_models/_common/polynomial/: index.html
autoapi/ansys/materials/manager/_models/_fluent/: index.html
autoapi/ansys/materials/manager/_models/_fluent/ideal_gas/: index.html
autoapi/ansys/materials/manager/_models/_fluent/simple_properties/: index.html
autoapi/ansys/materials/manager/_models/_mapdl/: index.html
autoapi/ansys/materials/manager/_models/_mapdl/anisotropic_elasticity/: index.html
autoapi/ansys/materials/manager/_models/_mapdl/simple_properties/: index.html
autoapi/ansys/materials/manager/material/: index.html
autoapi/ansys/materials/manager/material_manager/: index.html
autoapi/ansys/materials/manager/serialize/: index.html
autoapi/ansys/materials/manager/util/: index.html
autoapi/ansys/materials/manager/util/common/: index.html
autoapi/ansys/materials/manager/util/mapdl/: index.html
autoapi/ansys/materials/manager/util/mapdl/mapdl_reader/: index.html
autoapi/ansys/materials/manager/util/mapdl/mpdata_parser/: index.html
autoapi/ansys/materials/manager/util/mapdl/tbdata_parser/: index.html
autoapi/ansys/materials/manager/util/matml/: index.html
autoapi/ansys/materials/manager/util/matml/matml_from_material/: index.html
autoapi/ansys/materials/manager/util/matml/matml_parser/: index.html
autoapi/ansys/materials/manager/util/matml/matml_property_map/: index.html
autoapi/ansys/materials/manager/util/matml/matml_to_material/: index.html
doc/: make.bat
doc/source/: conf.py  contributing.rst  index.rst
doc/source/_autoapi_templates/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
requirements/: requirements_build.txt  requirements_doc.txt
src/ansys/materials/manager/: __init__.py  material.py  material_manager.py  matml_from_material.py  matml_parser.py  matml_property_map.py  matml_to_material.py  mpdata_parser.py  property_codes.py  serialize.py  tbdata_parser.py
src/ansys/materials/manager/_models/: __init__.py
src/ansys/materials/manager/_models/_common/: _base.py  _exceptions.py  _packages.py  constant.py  piecewise_linear.py  polynomial.py
src/ansys/materials/manager/_models/_fluent/: fluent_writer.py  ideal_gas.py  simple_properties.py
src/ansys/materials/manager/_models/_mapdl/: anisotropic_elasticity.py  mapdl_writer.py  simple_properties.py
src/ansys/materials/manager/_models/_matML/: matML_writer.py
src/ansys/materials/manager/_nonlinear_models/: _base.py
src/ansys/materials/manager/util/: common.py
src/ansys/materials/manager/util/mapdl/: mapdl_reader.py  mpdata_parser.py  output_format.py  tbdata_parser.py
src/ansys/materials/manager/util/matml/: matml_from_material.py  matml_parser.py  matml_property_map.py  matml_to_material.py
tests/: test_materials.py  test_matmal_to_material.py  test_matml_from_material.py  test_matml_reader.py  test_metadata.py
tests/data/: ref_steel_eglass_air.xml  steel_eglass_air.xml  steel_eglass_ud.xml
tests/fluent/: test_serialize_props.py
tests/mapdl/: test_manager_integration.py  test_serialize_common.py
tests/matml/: test_matmal_to_material.py  test_matml_from_material.py  test_matml_reader.py  test_matml_to_material.py
tests/test_material_models/: test_anisotropic_elasticity.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
version/0.1/_sources/autoapi/: index.rst.txt
version/0.1/autoapi/: index.html
version/0.1/autoapi/ansys/materials/manager/: index.html
version/0.1/autoapi/ansys/materials/manager/_models/: index.html
version/0.1/autoapi/ansys/materials/manager/material/: index.html
version/0.1/autoapi/ansys/materials/manager/material_manager/: index.html
version/0.1/autoapi/ansys/materials/manager/serialize/: index.html
version/0.1/autoapi/ansys/materials/manager/util/: announcement.html  index.html
version/0.2/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
version/0.2/_sources/autoapi/ansys/materials/manager/: index.rst.txt
version/0.2/autoapi/ansys/materials/manager/: index.html
version/dev/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: contributing.rst.txt
version/dev/_sources/api/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/materials/manager/: index.html
version/dev/autoapi/: index.html
version/dev/autoapi/ansys/materials/manager/: index.html
version/stable/: contributing.html  genindex.html  index.html  searchindex.js
version/stable/autoapi/: index.html
(+149 files in other folders)
