[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-materials-manager"
version = "0.1.dev0"
description = "Python package to unify material management across the ansys portfolio"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/pyansys/pymaterials-manager"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
importlib-metadata = {version = "^4.0", python = "<3.8"}
numpy = "^1.23.5"

# Documentation dependencies
ansys-sphinx-theme = {version = "==0.8.1", optional = true}
numpydoc = {version = "==1.5.0", optional = true}
Sphinx = {version = "==5.1.1", optional = true}
sphinx-autoapi = {version = "==2.0.1", optional = true}
sphinx-copybutton = {version = "==0.5.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coolprop = "^6.4.1"
ansys-mapdl-core = "^0.63.3"
ansys-fluent-core = "^0.12.3"

[tool.poetry.extras]
doc = [
    "ansys-sphinx-theme",
    "numpydoc",
    "Sphinx",
    "sphinx-autoapi",
    "sphinx-copybutton",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.materials"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = [
    "mapdl_integration: tests requiring a running instance of MAPDL",
]
addopts = "-m 'not mapdl_integration'"
