[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-materials-manager"
version = "0.2.4.dev0"
description = "Python package to unify material management across the ansys portfolio"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.core@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/pymaterials-manager"
documentation = "https://manager.materials.docs.pyansys.com"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.0"

[tool.poetry.group.doc.dependencies]
ansys-sphinx-theme = ">=0.12,<1.4"
numpydoc = "^1.6.0"
Sphinx = "^7.2,<9.0"
sphinx-autoapi = "^3.0"
sphinx-copybutton = "==0.5.2"
sphinx-jinja = "^2.0.2"
sphinx-design = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3,<9.0"
coolprop = "^6.4.1"
ansys-mapdl-core = ">=0.68,<0.70"
ansys-fluent-core = ">=0.28,<0.30"
twine = ">=4.0.2,<7.0.0"
pytest-cov = ">=4,<7"
pre-commit = ">=3.2.2,<5.0.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.materials"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = [
    "mapdl_integration: tests requiring a running instance of MAPDL",
]
addopts = "-m 'not mapdl_integration'"
